--- a/app/globals.css
+++ b/app/globals.css
@@ -3,21 +3,29 @@
 @tailwind utilities;
 
 :root {
-  --background: #fafafa;
-  --foreground: #171717;
+  --background: #f0f1f2;
+  --foreground: #212121;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #fafafa;
+    --background: #f0f1f2;
     --foreground: #171717;
   }
-}
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family:
+    var(--font-roboto),
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    sans-serif;
   line-height: 1.6;
 }
 
@@ -26,4 +34,59 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+/* Navigation link border animation */
+.nav-link {
+  position: relative;
+  display: inline-block;
+  padding-bottom: 4px;
+}
+
+.nav-link::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background-color: currentColor;
+  transition: width 0.3s ease-in-out;
+}
+
+.nav-link:hover::after {
+  width: 100%;
+}
+
+.nav-link.active::after {
+  width: 100%;
+}
+
+/* Custom Hamburger Menu */
+.hamburger-menu {
+  width: 18px;
+  height: 14px;
+  color: #212121;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.hamburger-menu span {
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: #000;
+  transition: all 0.2s ease-in-out;
+  border-radius: 2px;
+}
+
+.hamburger-menu:hover span:nth-child(1) {
+  transform: translateY(2px);
+}
+
+.hamburger-menu:hover span:nth-child(3) {
+  transform: translateY(-2px);
 }
